--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8" />
 
 <p>
-Подключайся и играй на наших серверах! 
+Подключайся и играй на наших серверах!
 	<a href="#"><img src="images/social_vk.png" alt="Группа Minecraft-km7 в ВКонтакте"></a>
 	<a href="#"><img src="images/social_face.png" alt="Группа Minecraft-km7 в Facebook"></a>
 	<a href="#"><img src="images/lang_lang.png" alt="Change to the english version Minecraft-km"></a>
@@ -9,9 +9,11 @@
 
 <p>
 	<img src="images/logo.png" alt="logo Minecraft">
-	Адмін: <a href="tel:+380683332210">+38(068)333-22-10</a> <a href="tel:+380997505050">+38(099)750-50-50</a>
+	Адмін: <a href="tel:+380683332210">+38(068)333-22-10</a> 
+				<a href="tel:+380997505050">+38(099)750-50-50</a>
 	По донату: <a href="tel:+380673322180">067-33-22-180</a>
-	Скайп: <img src="images/icon_scype.png" alt="icon Scype"><a href="#">minecraft-km7</a>
+	Скайп: <img src="images/icon_scype.png" alt="icon Scype">
+				<a href="#">minecraft-km7</a>
 </p>
 
 <p>
@@ -21,22 +23,22 @@
 </p>
 
 <p>
-<a href="/">Гавная</a> 
-<a href="#">Об игре</a> 
-<a href="#">Список серверов</a> 
-<a href="#">Наша команда</a> 
-<a href="#">Донат</a> 
+	<a href="/">Гавная</a>
+	<a href="#">Об игре</a>
+	<a href="#">Список серверов</a>
+	<a href="#">Наша команда</a>
+	<a href="#">Донат</a>
 </p>
 
 <ul>
 	<li>
-			<a href="#">Мир Minecraft</a>
+		<a href="#">Мир Minecraft</a>
 		<ul>
-			<li><a href="#">Блоки</a></li>
-			<li><a href="#">Мобы</a></li>
-			<li><a href="#">Структуры</a></li>
-			<li><a href="#">Биомы</a></li>
-			<li><a href="#">Миры</a></li>
+				<li><a href="#">Блоки</a></li>
+				<li><a href="#">Мобы</a></li>
+				<li><a href="#">Структуры</a></li>
+				<li><a href="#">Биомы</a></li>
+				<li><a href="#">Миры</a></li>
 		</ul>
 	</li>
 <li><a href="#">Industrial craft</a></li>
@@ -46,7 +48,7 @@
 <li><a href="#">RailCraft</a></li>
 </ul>
 
-<p><h1>Подключайся и играй на наших серверах!</h1></p>
+<h1>Подключайся и играй на наших серверах!</h1>
 <img src="images/screenshot.jpg" alt="Скриншот из игри Minecraft">
 
 <p>Minecraft — компьютерная игра в стиле песочницы с открытым миром,
@@ -54,7 +56,8 @@
 что им делать в игре. <br>Несмотря на это, игра содержит систему достижений — поощрительных наград 
 за выполнение определенных действий.</p>
 
-<hr><h2>Новости</h2></hr/>
+<hr>
+<h2>Новости</h2>
 
 <p><b>2016-08-04</b></p>
 <p>Страж подводной крепости довольно сильный противник для начинащего ирока</p>
