--- a/index.html
+++ b/index.html
@@ -1,86 +1,122 @@
-<meta charset="UTF-8" />
+<!DOCTYPE html>
+<html lang="ru">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="css/style.css">
+		<title>Minecraft</title>
+	</head>
+<body>
 
-<p>
-Подключайся и играй на наших серверах!
-	<a href="#"><img src="images/social_vk.png" alt="Группа Minecraft-km7 в ВКонтакте"></a>
-	<a href="#"><img src="images/social_face.png" alt="Группа Minecraft-km7 в Facebook"></a>
-	<a href="#"><img src="images/lang_lang.png" alt="Change to the english version Minecraft-km"></a>
-</p>
+<div class="wrapper_container">
 
-<p>
-	<img src="images/logo.png" alt="logo Minecraft">
-	Адмін: <a href="tel:+380683332210">+38(068)333-22-10</a> 
-				<a href="tel:+380997505050">+38(099)750-50-50</a>
-	По донату: <a href="tel:+380673322180">067-33-22-180</a>
-	Скайп: <img src="images/icon_scype.png" alt="icon Scype">
-				<a href="#">minecraft-km7</a>
-</p>
+	<header>
+		<div class="social">
+			<p>
+			Подключайся и играй на наших серверах!
+			<img src="images/social_vk.png" alt="vkontakte">
+			<img src="images/social_face.png" alt="facebook">
+			<img src="images/lang_ang.png" alt="lang_ang">
+			</p>
+		</div>
+		<div class="header_content">
+			<img src="images/logo.png" alt="logo Minecraft">
 
-<p>
-	<a href="#">Выбрать сервер</a>
-	<a href="#">Случайный</a>
-	<img src="images/logo_right.png" alt="Logo Minicraft right" width="270">
-</p>
+				<div class="header_contact">
+				<p>Адмін:</p>
+					<p>+38(068)333-22-10
+					<p>+38(099)750-50-50
+				<p>По донату:067-33-22-180
+				<p>Скайп: <img src="images/icon_scype.png" alt="icon scype"><a href="#"><em>minecraft-km7</em></a></p>
+				</div>
+					<div class="header_button">
+					<button>Выбрать сервер</button>
+					<button>Случайный</button>
+					</div>
+			<img src="images/logo_right.png" alt="logo right">
+		</div>
+<menu>
+	<li><a href="/">Главная</a></li>
+	<li><a href="#">Об игре</a></li>
+	<li><a href="#">Список серверов</a></li>
+	<li><a href="#">Наша команда</a></li>
+	<li><a href="#">Донат</a></li>
+</menu>
+	</header>
 
-<p>
-	<a href="/">Гавная</a>
-	<a href="#">Об игре</a>
-	<a href="#">Список серверов</a>
-	<a href="#">Наша команда</a>
-	<a href="#">Донат</a>
-</p>
-
-<ul>
-	<li>
-		<a href="#">Мир Minecraft</a>
+<div class="main_container">
+	<div class="side">
 		<ul>
-				<li><a href="#">Блоки</a></li>
-				<li><a href="#">Мобы</a></li>
-				<li><a href="#">Структуры</a></li>
-				<li><a href="#">Биомы</a></li>
-				<li><a href="#">Миры</a></li>
-		</ul>
-	</li>
-<li><a href="#">Industrial craft</a></li>
-<li><a href="#">OptiFine</a></li>
-<li><a href="#">Forge</a></li>
-<li><a href="#">TooManyItems</a></li>
-<li><a href="#">RailCraft</a></li>
-</ul>
+			<li>
+			<a href="#">Мир Minecraft</a>
+					<ul>
+						<li><a href="#">Блоки</a></li>
+						<li><a href="#">Мобы</a></li>
+						<li><a href="#">Структуры</a></li>
+						<li><a href="#">Биомы</a></li>
+						<li><a href="#">Миры</a></li>
+					</ul>
+			</li>
+			<li><a href="#">Industrial craft</a></li>
+			<li><a href="#">OptiFine</a></li>
+			<li><a href="#">Forge</a></li>
+			<li><a href="#">TooManyItems</a></li>
+			<li><a href="#">RailCraft</a></li>
+			</ul>
+	</div>
+	<div class="main_content">
+		<div class="article">
+			<h1>Подключайся и играй на наших серверах!</h1>
+			<img src="images/screenshot.jpg" alt="screenshot">
+			<p>Minecraft — компьютерная игра в стиле песочницы с открытым миром,
+			в которой перед игроком не ставятся какие-либо определенные цели — игроки сами выбирают, 
+			что им делать в игре. <br>Несмотря на это, игра содержит систему достижений — поощрительных наград 
+			за выполнение определенных действий.</p>
+		</div>
+		<div class="news">
+			<div class="news_one">
+				<hr>
+				<h2>Новости</h2>
+				<p><b>2016-08-04</b></p>
+				<p>Страж подводной крепости довольно сильный противник для начинащего ирока</p>
+				<a href="/"><img src="images/news1.jpg" alt="news_one"></a>
+			</div>
+			<div class="news_two">
+				<p><b>2016-06-27</b></p>
+				<p>Встречайте: белые медведи в холодных биомах!</p>
+				<a href="/"><img src="images/news2.jpg" alt="news_two"></a>
+			</div>
+			<div class="news_three">
+				<p><b>2016-04-17</b></p>
+				<p>В мобильной версии теперь можно приручить кролика, он станет верным другом</p>
+				<a href="/"><img src="images/news3.jpg" alt="news_three"></a>
+			</div>
+		</div>
+	</div>
 
-<h1>Подключайся и играй на наших серверах!</h1>
-<img src="images/screenshot.jpg" alt="Скриншот из игри Minecraft">
-
-<p>Minecraft — компьютерная игра в стиле песочницы с открытым миром,
-в которой перед игроком не ставятся какие-либо определенные цели — игроки сами выбирают, 
-что им делать в игре. <br>Несмотря на это, игра содержит систему достижений — поощрительных наград 
-за выполнение определенных действий.</p>
-
-<hr>
-<h2>Новости</h2>
-
-<p><b>2016-08-04</b></p>
-<p>Страж подводной крепости довольно сильный противник для начинащего ирока</p>
-<a href="/"><img src="images/news1.jpg" alt="Страж подводной крепости"></a>
-
-<p><b>2016-06-27</b></p>
-<p>Встречайте: белые медведи в холодных биомах!</p>
-<a href="/"><img src="images/news2.jpg" alt="Белые медведи"></a>
-
-<p><b>2016-04-17</b></p>
-<p>В мобильной версии теперь можно приручить кролика, он станет верным другом</p>
-<a href="/"><img src="images/news3.jpg" alt="Кролик"></a>
-
-<h3>Подключайся и играй на наших серверах!</h3>
-
-Адмін: <a href="tel:+380683332210">+38(068)333-22-10</a> <a href="tel:+380997505050">+38(099)750-50-50</a>
-По донату: <a href="tel:+380673322180">067-33-22-180</a>
-
-<p>
-	<a href="/"><img src="images/logo1.png" alt="Optifine"></a>
-	<a href="/"><img src="images/logo2.png" alt="Minecraft force"></a>
-	<a href="/"><img src="images/logo3.png" alt="Industrial craft"></a>
-	<a href="/"><img src="images/logo4.png" alt="Railcraft"></a>
-</p>
-
-<p>&copy; Poshtar Boba, 2016</p>
+		<div class="footer">
+		<div class="footer_contact">
+			<div class="game_server">
+			<p>Подключайся и играй на наших серверах!</p>
+			</div>
+			<div class="contacts">
+			<p>Адмін:</p>
+			<p><a href="tel:+380683332210">+38(068)333-22-10</a> </p>
+			<p><a href="tel:+380997505050">+38(099)750-50-50</a></p>
+			<p>По донату: <a href="tel:+380673322180">067-33-22-180</a></p>
+			</div>
+		</div>
+		<div class="footer_images">
+		<a href="#"><img src="images/footer_1.png" alt="footer_1"></a>
+		<a href="#"><img src="images/footer_2.png" alt="footer_2"></a>
+		<a href="#"><img src="images/footer_3.png" alt="footer_3"></a>
+		<a href="#"><img src="images/footer_4.png" alt="footer_4"></a>
+		</div>
+			<div class="copirate">
+			<p>&copy; nasim 610890, 2016</p>
+			</div>
+		</div>
+	</div>
+</div>
+</body>
+</html>
