--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 				<div class="header_contact">
 				<p>Адмін:</p>
-					<p>+38(068)333-22-10
-					<p>+38(099)750-50-50
-				<p>По донату:067-33-22-180
+				<p>+38(068)333-22-10</p>
+					<p>+38(099)750-50-50</p>
+				<p>По донату:067-33-22-180</p>
 				<p>Скайп: <img src="images/icon_scype.png" alt="icon scype"><a href="#"><em>minecraft-km7</em></a></p>
 				</div>
 					<div class="header_button">
