--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 
 <div class="wrapper_container">
 
-	<header>
-		<div class="social">
+		<div class="header_social">
 			<p>
-			Подключайся и играй на наших серверах!
+			<span>Подключайся и играй на наших серверах!</span>
 			<img src="images/social_vk.png" alt="vkontakte">
 			<img src="images/social_face.png" alt="facebook">
 			<img src="images/lang_ang.png" alt="lang_ang">
 			</p>
 		</div>
+
 		<div class="header_content">
-			<img src="images/logo.png" alt="logo Minecraft">
+			<img class="logo1" src="images/logo.png" alt="logo Minecraft">
+			<img class="logo2" src="images/logo_right.png" alt="logo right">
 
 				<div class="header_contact">
 				<p>Адмін:</p>
-					<p>+38(068)333-22-10</p>
-					<p>+38(099)750-50-50</p>
-				<p>По донату:067-33-22-180</p>
-				<p>Скайп: <img src="images/icon_scype.png" alt="icon scype"><a href="#"><em>minecraft-km7</em></a></p>
+				<p><a href="tel:+380683332210">+38(068)333-22-10</a> </p>
+					<p><a href="tel:+380997505050">+38(099)750-50-50</a></p>
+					<p></p>По донату: <a href="tel:+380673322180">067-33-22-180</a></p>
+					Скайп: <img class="scype" src="images/icon_scype.png" alt="icon scype"><a href="#"><em>minecraft-km7</em></a>
+
+					<button class="button1">Выбрать сервер</button>
+					<button class="button2">Случайный</button>
 				</div>
-					<div class="header_button">
-					<button>Выбрать сервер</button>
-					<button>Случайный</button>
-					</div>
-			<img src="images/logo_right.png" alt="logo right">
 		</div>
+
 <menu>
 	<li><a href="/">Главная</a></li>
 	<li><a href="#">Об игре</a></li>
@@ -42,7 +42,7 @@
 	<li><a href="#">Наша команда</a></li>
 	<li><a href="#">Донат</a></li>
 </menu>
-	</header>
+
 
 <div class="main_container">
 	<div class="side">
