--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="wrapper_container">
-
+	<header>
 		<div class="header_social">
 			<p>
 			<span>Подключайся и играй на наших серверах!</span>
@@ -18,37 +18,38 @@
 			<img src="images/lang_ang.png" alt="lang_ang">
 			</p>
 		</div>
-
 		<div class="header_content">
 			<img class="logo1" src="images/logo.png" alt="logo Minecraft">
 			<img class="logo2" src="images/logo_right.png" alt="logo right">
-
 				<div class="header_contact">
-				<p>Адмін:</p>
-				<p><a href="tel:+380683332210">+38(068)333-22-10</a> </p>
-					<p><a href="tel:+380997505050">+38(099)750-50-50</a></p>
-					<p></p>По донату: <a href="tel:+380673322180">067-33-22-180</a></p>
-					Скайп: <img class="scype" src="images/icon_scype.png" alt="icon scype"><a href="#"><em>minecraft-km7</em></a>
-
-					<button class="button1">Выбрать сервер</button>
-					<button class="button2">Случайный</button>
+					<p>Адмін:</p>
+					<p>+38(068)333-22-10</p>
+					<p>+38(099)750-50-50</p>
+					<p>По донату: 067-33-22-180</p>
+					<p>Скайп:<img class="scype" src="images/icon_scype.png" alt="icon scype"><a href="#"><em>minecraft-km7</em></a></p>
+				</div>
+				<div class="header_button">
+					<p><button class="button_one">Выбрать сервер</button></p>
+					<p><button class="button_two">Случайный</button></p>
 				</div>
 		</div>
+			<div class="menu">
+				<ul>
+					<li>Главная</li>
+					<li>Об игре</li>
+					<li>Список серверов</li>
+					<li>Наша команда</li>
+					<li>Донат</li>
+				</ul>
+			</div> 
+			
+	</header>
 
-<menu>
-	<li><a href="/">Главная</a></li>
-	<li><a href="#">Об игре</a></li>
-	<li><a href="#">Список серверов</a></li>
-	<li><a href="#">Наша команда</a></li>
-	<li><a href="#">Донат</a></li>
-</menu>
-
-
-<div class="main_container">
-	<div class="side">
-		<ul>
-			<li>
-			<a href="#">Мир Minecraft</a>
+	<div class="main_container">
+			<div class="side">
+				<ul>
+					<li>
+						<a href="#">Мир Minecraft</a>
 					<ul>
 						<li><a href="#">Блоки</a></li>
 						<li><a href="#">Мобы</a></li>
@@ -56,64 +57,70 @@
 						<li><a href="#">Биомы</a></li>
 						<li><a href="#">Миры</a></li>
 					</ul>
-			</li>
-			<li><a href="#">Industrial craft</a></li>
-			<li><a href="#">OptiFine</a></li>
-			<li><a href="#">Forge</a></li>
-			<li><a href="#">TooManyItems</a></li>
-			<li><a href="#">RailCraft</a></li>
-			</ul>
-	</div>
-	<div class="main_content">
-		<div class="article">
-			<h1>Подключайся и играй на наших серверах!</h1>
-			<img src="images/screenshot.jpg" alt="screenshot">
-			<p>Minecraft — компьютерная игра в стиле песочницы с открытым миром,
-			в которой перед игроком не ставятся какие-либо определенные цели — игроки сами выбирают, 
-			что им делать в игре. <br>Несмотря на это, игра содержит систему достижений — поощрительных наград 
-			за выполнение определенных действий.</p>
+					</li>
+					<li><a href="#">Industrial craft</a></li>
+					<li><a href="#">OptiFine</a></li>
+					<li><a href="#">Forge</a></li>
+					<li><a href="#">TooManyItems</a></li>
+					<li><a href="#">RailCraft</a></li>
+				</ul>
+			</div>
+
+		<div class="main_content">
+				<div class="article">
+					<h1>Подключайся и играй на наших серверах!</h1>
+					<div class="screenshot">
+						<img src="images/screenshot.jpg" alt="screenshot">
+					</div>
+					<p>Minecraft — компьютерная игра в стиле песочницы с открытым миром,
+					в которой перед игроком не ставятся какие-либо определенные цели — игроки сами выбирают, 
+					что им делать в игре. <br>Несмотря на это, игра содержит систему достижений — поощрительных наград 
+					за выполнение определенных действий.</p>
+				</div>
+				<div class="news">
+					<hr>
+					<h2>Новости</h2>
+
+					<div class="news_one">
+						<p><b>2016-08-04</b></p>
+						<p>Страж подводной крепости довольно сильный противник для начинащего ирока</p>
+						<a href="/"><img src="images/news1.jpg" alt="news_one"></a>
+					</div>
+
+					<div class="news_two">
+						<p><b>2016-06-27</b></p>
+						<p>Встречайте: белые медведи в холодных биомах!</p>
+						<a href="/"><img src="images/news2.jpg" alt="news_two"></a>
+					</div>
+					
+					<div class="news_three">
+						<p><b>2016-04-17</b></p>
+						<p>В мобильной версии теперь можно приручить кролика, он станет верным другом</p>
+						<a href="/"><img src="images/news3.jpg" alt="news_three"></a>
+					</div>
+				</div>
 		</div>
-		<div class="news">
-			<div class="news_one">
-				<hr>
-				<h2>Новости</h2>
-				<p><b>2016-08-04</b></p>
-				<p>Страж подводной крепости довольно сильный противник для начинащего ирока</p>
-				<a href="/"><img src="images/news1.jpg" alt="news_one"></a>
-			</div>
-			<div class="news_two">
-				<p><b>2016-06-27</b></p>
-				<p>Встречайте: белые медведи в холодных биомах!</p>
-				<a href="/"><img src="images/news2.jpg" alt="news_two"></a>
-			</div>
-			<div class="news_three">
-				<p><b>2016-04-17</b></p>
-				<p>В мобильной версии теперь можно приручить кролика, он станет верным другом</p>
-				<a href="/"><img src="images/news3.jpg" alt="news_three"></a>
-			</div>
-		</div>
-	</div>
 
 		<div class="footer">
-		<div class="footer_contact">
-			<div class="game_server">
-			<p>Подключайся и играй на наших серверах!</p>
+			<div class="footer_contact">
+				<div class="game_server">
+					<p>Подключайся и играй на наших серверах!</p>
+				</div>
+					<div class="foot_contacts">
+						<p>Адмін:</p>
+						<p>+38(068)333-22-10</p>
+						<p>+38(099)750-50-50</p>
+						<p>По донату: 067-33-22-180</p>
+					</div>
 			</div>
-			<div class="contacts">
-			<p>Адмін:</p>
-			<p><a href="tel:+380683332210">+38(068)333-22-10</a> </p>
-			<p><a href="tel:+380997505050">+38(099)750-50-50</a></p>
-			<p>По донату: <a href="tel:+380673322180">067-33-22-180</a></p>
+			<div class="footer_images">
+				<<img src="images/footer_1.png" alt="footer_1">
+				<<img src="images/footer_2.png" alt="footer_2">
+				<<img src="images/footer_3.png" alt="footer_3">
+				<<img src="images/footer_4.png" alt="footer_4">
 			</div>
-		</div>
-		<div class="footer_images">
-		<a href="#"><img src="images/footer_1.png" alt="footer_1"></a>
-		<a href="#"><img src="images/footer_2.png" alt="footer_2"></a>
-		<a href="#"><img src="images/footer_3.png" alt="footer_3"></a>
-		<a href="#"><img src="images/footer_4.png" alt="footer_4"></a>
-		</div>
 			<div class="copirate">
-			<p>&copy; nasim 610890, 2016</p>
+				<p>&copy; nasim610890, 2016</p>
 			</div>
 		</div>
 	</div>
